Sonn finished with exercise

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link href="index.css" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>CSS exercise</title>
 </head>
@@ -9,9 +10,16 @@
 	<p>Paragraph</p>
 	<div>Div
 		<p>First paragraph inside div</p>
-		<p>Second paragraph inside div</p>
+		<p class="bigtext">Second paragraph inside div</p>
 	</div>
+	<p class="bigtext">Paragraph</p>
 	<p>Paragraph</p>
-	<p>Paragraph</p>
+	
+	<ul>
+		<li id="green"><a href="http://www.trionworlds.com/rift/en/">Rift</a></li>
+		<li id="yellow"><a href="https://www.paladins.com/">Paladins</a></li>
+		<li id="blue"><a href="https://www.ubisoft.com/en-us/game/the-division/">The Division</a></li>
+		<li id="red"><a href="index2.html">My game</a></li>
+	</ul>
 </body>
 </html>
