--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>CSS exercise</title>
 </head>
 <body>
+<section>
 	<h1>CSS exercises</h1>
 	<p>Paragraph</p>
 	<div>Div
@@ -14,7 +15,7 @@
 	</div>
 	<p class="bigtext">Paragraph</p>
 	<p>Paragraph</p>
-	
+</section>
 	<ul>
 		<li id="green"><a href="http://www.trionworlds.com/rift/en/">Rift</a></li>
 		<li id="yellow"><a href="https://www.paladins.com/">Paladins</a></li>
